Can't fix background taking up too much space

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,11 @@
     margin-top: 212px;
     display: flex;
     justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+.img {
+    width: 1550px;
 }
 /* Section */
 .form-wraper {
